# stock-trading-cli-with-async-streams

./: .gitignore  Cargo.toml  FAQ.md  LICENSE  README.md  Summary.md  sp500_2024_aug.csv  sp500_feb_2024.csv
src/: actix_async_actors.rs  actors.rs  async_signals.rs  cli.rs  constants.rs  handlers.rs  lib.rs  logic.rs  main.rs  my_actors.rs  my_async_actors.rs  process.rs  signals.rs  sync_signals.rs  types.rs
