[package]
name = "stock-trading-cli-with-async-streams"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Lazarević"]
description = "Stock-Tracking CLI with Async Streams (HFT)"
repository = "https://github.com/ivanbgd/stock-trading-cli-with-async-streams"
license = "MIT"
keywords = ["finance", "fintech", "hft", "stock", "trading"]
categories = ["finance"]

[dependencies]
actix = { version = "0.13.5" }
actix-rt = { version = "2.10.0" }
anyhow = { version = "1.0.86" }
async-std = { version = "1.12.0", features = ["attributes", "tokio1", "unstable"] }
clap = { version = "4.5.16", features = ["derive"] }
futures = { version = "0.3.30" }
rayon = { version = "1.10.0" }
time = { version = "0.3.36", features = ["formatting", "parsing"] }
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.11" }
yahoo_finance_api = { version = "2.2.1" }
