[package]
name = "stock-trading-cli-with-async-streams"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Lazarević"]
description = "Stock-Tracking CLI with Async Streams (HFT)"
repository = "https://github.com/ivanbgd/stock-trading-cli-with-async-streams"
license = "MIT"
keywords = ["finance", "fintech", "hft", "stock", "trading"]
categories = ["finance"]

[dependencies]
actix = { version = "0.13.5" }
actix-rt = { version = "2.10.0" }
anyhow = { version = "1.0.86" }
axum = { version = "0.7.5", features = ["macros"] }
#axum = { version = "0.7.5", features = ["macros", "tokio"] }
clap = { version = "4.5.16", features = ["derive"] }
futures = { version = "0.3.30" }
rayon = { version = "1.10.0" }
serde = { version = "1.0.209" }
serde_json = { version = "1.0.127" }
time = { version = "0.3.36", features = ["formatting", "parsing"] }
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yahoo_finance_api = { version = "2.2.1" }
